# playwright-s3-snapshot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  playwright-s3-snapshot.json  pyproject.toml  requirements-lambda.txt  run_tests.py  template.yaml  test-lambda-local.py  test-lambda-offline.py
src/playwright_s3_snapshot/: __init__.py  cli.py  config.py  lambda_handler.py  s3_upload.py  screenshot.py  snapshot.py
tests/: conftest.py  test_cli.py  test_config.py  test_init.py  test_lambda_handler.py  test_s3_upload.py  test_screenshot.py  test_snapshot.py
